1.8 (2012-06-??)
----------------
o Added edition information (community, advanced, enterprise)
o Added a cluster-name hash so that stores originating from the same cluster can be aggregated
o Fixed release version and revision
o Changed precedence of database configuration over internal udc configuration

1.7 (2012-04-18)
----------------
o Modified UDC to run one thread per DB, and to shut down background thread on unload. Closes #279
o UDC now sends the machines MAC adress to Neo Technology, to separate between instances behind firewalls
o UDC now sends database registration ID to Neo Technology, if one is available
o UDC now sends "tags" to Neo Technology, these contain information about the type of deployment, such as language, web-container, app-container, spring, ejb
o UDC now uses new configuration API

1.7.M01 (2012-03-12)
--------------------
o Added possibility to interpret and store registration ID with a ping.
o Added MAC address to pings.

1.4.M03 (2011-05-26)
--------------------
o No changes.

1.3.M05 (2011-03-24)
--------------------
o Removed unnecessary sys out during startup.

1.3.M04 (2011-03-10)
--------------------
o No changes.

1.3.M03 (2011-02-24)
-------------------
o Minor changes related to KernelExtentions refactoring.

1.3.M02 (2011-02-10)
-------------------
o Added possibility to change the source identification via configuration.

0.2-1.3.M01 (2011-01-27)
------------------------

o No changes

0.1-1.2 (2010-12-29)
--------------------

o Improved handling of recoveries.

0.1-1.2.M06 (2010-12-21)
------------------------

No changes.

0.1-1.2.M05 (2010-12-02)
------------------------

No changes.

0.1-1.2.M04 (2010-11-18)
------------------------

No changes.

0.1-1.2.M03 (2010-11-04)
------------------------

No changes.

0.1-1.2.M02 (2010-10-21)
------------------------

o Fixed an issue where a timer thread was left running, keeping the JVM alive.

0.1-1.2.M01 (2010-10-08)
------------------------
