@@ -30,4 +30,8 @@ public class UdcConstants {
     public static final String REGISTRATION = "reg";
     public static final String MAC = "mac";
     public static final String PING = "p";
+    public static final String DISTRIBUTION = "dist";
+    public static final String UDC_PROPERTY_PREFIX = "neo4j.ext.udc";
+    public static final String OS_PROPERTY_PREFIX = "os";
+    public static final String UNKNOWN_DIST = "unknown";
 }
