@@ -1,33 +1,0 @@
-/**
- * Copyright (c) 2002-2012 "Neo Technology,"
- * Network Engine for Objects in Lund AB [http://neotechnology.com]
- *
- * This file is part of Neo4j.
- *
- * Neo4j is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- * (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
- *
- * You should have received a copy of the GNU General Public License
- * along with this program.  If not, see <http://www.gnu.org/licenses/>.
- */
-package org.neo4j.ext.udc.impl;
-
-public class UdcConstants {
-    public static final String ID = "id";
-    public static final String VERSION = "v";
-    public static final String REVISION = "revision";
-    public static final String EDITION = "edition";
-    public static final String TAGS = "tags";
-    public static final String CLUSTER_HASH = "cluster";
-    public static final String SOURCE = "source";
-    public static final String REGISTRATION = "reg";
-    public static final String MAC = "mac";
-    public static final String PING = "p";
-}
