@@ -21,26 +21,16 @@
 package org.neo4j.ext.udc.impl;
 
 import java.io.InputStream;
-import java.lang.management.ManagementFactory;
-import java.lang.management.RuntimeMXBean;
-import java.net.InetAddress;
-import java.net.NetworkInterface;
-import java.util.Formatter;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Properties;
 import java.util.Timer;
-import java.util.regex.Pattern;
 
-import org.neo4j.ext.udc.Edition;
-import org.neo4j.graphdb.factory.GraphDatabaseSetting;
 import org.neo4j.graphdb.factory.GraphDatabaseSettings;
 import org.neo4j.helpers.Service;
-import org.neo4j.helpers.collection.MapUtil;
 import org.neo4j.kernel.KernelData;
 import org.neo4j.kernel.KernelExtension;
 import org.neo4j.kernel.configuration.Config;
-import org.neo4j.kernel.impl.nioneo.xa.NeoStoreXaDataSource;
 
 /**
  * Kernel extension for UDC, the Usage Data Collector. The UDC runs as a background
@@ -86,18 +76,9 @@ public class UdcExtensionImpl extends KernelExtension<UdcTimerTask>
         int firstDelay = config.getInteger( GraphDatabaseSettings.first_delay);
         int interval = config.getInteger( GraphDatabaseSettings.interval );
         String hostAddress = config.get( GraphDatabaseSettings.udc_host );
-        String source = config.get( GraphDatabaseSettings.udc_source );
-        String registration = config.get( GraphDatabaseSettings.udc_registration_key );
-        Integer clusterNameHash = determineClusterNameHash(config);
-        NeoStoreXaDataSource ds = kernel.graphDatabase().getXaDataSourceManager().getNeoStoreDataSource();
-        boolean crashPing = ds.getXaContainer().getLogicalLog().wasNonClean();
-        String storeId = Long.toHexString(ds.getRandomIdentifier());
-        String version = kernel.version().getReleaseVersion();
-        String revision = kernel.version().getRevision();
-        String classPath = getClassPath();
-        String tags = determineTags(jarNamesForTags, classPath);
-        Edition edition = determineEdition(classPath);
-        UdcTimerTask task = new UdcTimerTask( hostAddress, version, revision, storeId, source, crashPing, registration, formattedMacAddy(), tags, edition,clusterNameHash);
+
+        UdcInformationCollector collector = new UdcInformationCollector(config, kernel);
+        UdcTimerTask task = new UdcTimerTask( hostAddress, collector.getStoreId(), collector.getCrashPing(), collector.getUdcParams());
         
         timer = new Timer( "Neo4j UDC Timer", /*isDaemon=*/true );
         timer.scheduleAtFixedRate( task, firstDelay, interval );
@@ -114,47 +95,6 @@ public class UdcExtensionImpl extends KernelExtension<UdcTimerTask>
         return new Config( config );
     }
 
-    private Integer determineClusterNameHash(Config config) {
-        try {
-            Class<?> haSettings = Class.forName("org.neo4j.kernel.ha.HaSettings");
-            GraphDatabaseSetting.StringSetting setting = (GraphDatabaseSetting.StringSetting) haSettings.getField("cluster_name").get(null);
-            String name = config.get(setting);
-            return name!=null ? Math.abs(name.hashCode()) : null;
-        } catch(Exception e) {
-            return null;
-        }
-    }
-
-    private Edition determineEdition(String classPath) {
-        if (classPath.contains("neo4j-ha")) return Edition.enterprise;
-        if (classPath.contains("neo4j-management")) return Edition.advanced;
-        return Edition.community;
-    }
-
-    private final Map<String,String> jarNamesForTags = MapUtil.stringMap("spring-", "spring", "(javax.ejb|ejb-jar)","ejb", "(weblogic|glassfish|websphere|jboss)","appserver",
-            "openshift","openshift","cloudfoundry","cloudfoundry",
-            "(junit|testng)", "test",
-            "jruby", "ruby","clojure","clojure","jython","python","groovy","groovy",
-            "(tomcat|jetty)","web");
-
-    private String determineTags(Map<String, String> jarNamesForTags, String classPath) {
-        StringBuilder result=new StringBuilder();
-        for (Map.Entry<String, String> entry : jarNamesForTags.entrySet())
-        {
-            final Pattern pattern = Pattern.compile(entry.getKey());
-            if (pattern.matcher(classPath).find())
-            {
-                result.append(",").append(entry.getValue());
-            }
-        }
-        if (result.length() == 0) return null;
-        return result.substring(1);
-    }
-
-    private String getClassPath() {
-        RuntimeMXBean runtime = ManagementFactory.getRuntimeMXBean();
-        return runtime.getClassPath();
-    }
 
     @Override
     protected void unload( UdcTimerTask task )
@@ -182,26 +122,4 @@ public class UdcExtensionImpl extends KernelExtension<UdcTimerTask>
         return sysProps;
     }
 
-    private String formattedMacAddy() {
-        String formattedMac = "0";
-        try {
-            InetAddress address = InetAddress.getLocalHost();
-            NetworkInterface ni = NetworkInterface.getByInetAddress(address);
-            if (ni != null) {
-                byte[] mac = ni.getHardwareAddress();
-                if (mac != null) {
-                    StringBuilder sb = new StringBuilder(mac.length * 2);
-                    Formatter formatter = new Formatter(sb);
-                    for (byte b : mac) {
-                        formatter.format("%02x", b);
-                    }
-                    formattedMac = sb.toString();
-                }
-            }
-        } catch (Throwable t) {
-            //
-        }
-
-        return formattedMac;
-    }
 }
